--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Drum Kit</title>
+  <title>Drum Beats</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
 
   <div class="keys">
     <div data-key="65" class="key">
@@ -47,6 +46,7 @@
     </div>
   </div>
 
+
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
@@ -57,7 +57,13 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
+
 <script>
+  window.addEventListener('keydown',function(e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  console.log(audio)
+  });
+
 
 </script>
 
